# calibre-nueva

./: README.md  cps.py  pyproject.toml  setup.py
cps/: MyLoginManager.py  __init__.py  about.py  admin.py  babel.py  cache_buster.py  clean_html.py  cli.py  comic.py  config_sql.py  constants.py  converter.py  cover.py  db.py  debug_info.py  dep_check.py  editbooks.py  embed_helper.py  epub.py  epub_helper.py  error_handler.py  fb2.py  file_helper.py  fs.py  gdrive.py  gdriveutils.py  gevent_wsgi.py  helper.py  isoLanguages.py  iso_language_names.py  jinjia.py  kobo.py  kobo_auth.py  kobo_sync_status.py  logger.py  main.py  oauth.py  oauth_bb.py  opds.py  pagination.py  (+17 more)
cps/metadata_provider/: amazon.py  douban.py  google.py  lubimyczytac.py  scholar.py
cps/services/: Metadata.py  SyncToken.py  __init__.py  background_scheduler.py  gmail.py  goodreads_support.py  simpleldap.py  worker.py
cps/tasks/: convert.py  database.py  mail.py  metadata_backup.py  tempFolder.py  thumbnail.py
