[tool.poetry]
name = "calibre-nueva"
version = "0.1.0"
description = ""
authors = ["Khai Nguyen <1192669+khaister@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-babel = "^4.0.0"
flask-login = "^0.6.3"
flask-principal = "^0.4.0"
requests = "^2.32.2"
sqlalchemy = "^2.0.30"
tornado = "^6.4"
flask-wtf = "^1.2.1"
pypdf = "^4.2.0"
wand = "^0.6.13"
unidecode = "^1.3.8"
lxml = "^5.2.2"
chardet = "^5.2.0"
advocate = "^1.0.0"
flask-limiter = "^3.7.0"
regex = "^2024.5.15"
apscheduler = "^3.10.4"
google-api-python-client = "^2.130.0"
gevent = "^24.2.1"
httplib2 = "^0.22.0"
oauth2client = "^4.1.3"
uritemplate = "^4.1.1"
pyasn1 = "^0.6.0"
pydrive2 = "^1.19.0"
pyyaml = "^6.0.1"
rsa = "^4.9"
google-auth-oauthlib = "^1.2.0"
goodreads = "^0.3.2"
python-levenshtein = "^0.25.1"
python-ldap = "^3.4.4"
flask-simpleldap = "^2.0.0"
flask-dance = "^7.1.0"
sqlalchemy-utils = "^0.41.2"
rarfile = "^4.2"
scholarly = "^1.7.11"
markdown2 = "^2.4.13"
html2text = "^2024.2.26"
python-dateutil = "^2.9.0.post0"
beautifulsoup4 = "^4.12.3"
faust-cchardet = "^2.1.19"
py7zr = "^0.21.0"
natsort = "^8.4.0"
comicapi = "^3.2.0"
jsonschema = "^4.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
